[package]
name = "HArcMut"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyultis/HArcMut"
keywords = ["arc", "mut", "mutable"]
categories = ["data-structures"]
description = "mutable arc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.2"
arc-swap = "1.7.1"
